RIX-3659:increasing session timeout
Former-commit-id: 37c2bf22e156b84a665519825737ae797076607e

--- a/war/src/main/resources/shiro.ini
+++ b/war/src/main/resources/shiro.ini
@@ -43,7 +43,7 @@ securityManager.authorizer.permissionResolver = $globalPermissionResolver
 
 #myRealm.connectionTimeout = 30000
 #myRealm.credentialsMatcher = $sha256Matcher
-#securityManager.sessionManager.globalSessionTimeout = 1800000
+securityManager.sessionManager.globalSessionTimeout = 3600000
 
 [users]
 # The 'users' section is for simple deployments
