--- a/war/src/main/resources/shiro.ini
+++ b/war/src/main/resources/shiro.ini
@@ -43,6 +43,7 @@ securityManager.authorizer.permissionResolver = $globalPermissionResolver
 
 #myRealm.connectionTimeout = 30000
 #myRealm.credentialsMatcher = $sha256Matcher
+securityManager.sessionMode=native
 securityManager.sessionManager.globalSessionTimeout = 3600000
 
 [users]
