--- a/war/src/main/resources/spark.properties
+++ b/war/src/main/resources/spark.properties
@@ -11,3 +11,5 @@ spark.executor.extraJavaOptions -Dlog4j.configuration=log4j-executor.properties 
 spark.sql.parquet.cacheMetadata true
 spark.eventLog.enabled true
 spark.eventLog.dir hdfs:///spark/events/
+
+spark.yarn.max.executor.failures.disable true
