ACU-686: Disable killing of acume app when max number of executors failures reached
Former-commit-id: fcc3d672680fa94dcce3b13690ab70d013b7ce8f

--- a/war/src/main/resources/spark.properties
+++ b/war/src/main/resources/spark.properties
@@ -11,3 +11,5 @@ spark.executor.extraJavaOptions -Dlog4j.configuration=log4j-executor.properties 
 
 spark.eventLog.enabled true
 spark.eventLog.dir hdfs:///spark/events/
+
+spark.yarn.max.executor.failures.disable true
