--- a/core/pom.xml
+++ b/core/pom.xml
@@ -155,6 +155,18 @@
                         		<groupId>log4j</groupId>
                         		<artifactId>log4j</artifactId>
                 		</exclusion>
+                <exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-access</artifactId>
+				</exclusion>
+				 <exclusion>
+				 	<groupId>ch.qos.logback</groupId>
+				 	<artifactId>logback-classic</artifactId>
+				 </exclusion>
+				 <exclusion>
+				 	<groupId>ch.qos.logback</groupId>
+				 	<artifactId>logback-core</artifactId>
+				 </exclusion>
 				<exclusion>
 					<groupId>xerces</groupId>
 					<artifactId>xercesImpl</artifactId>
