--- a/war/pom.xml
+++ b/war/pom.xml
@@ -17,18 +17,15 @@
         <scope>provided</scope>
     </dependency>
     <dependency>
-        <groupId>tomcat</groupId>
-        <artifactId>jasper-compiler</artifactId>
-        <version>5.5.23</version>
-        <scope>provided</scope>
-    </dependency>
+    	<groupId>acume.pcsa</groupId>
+    	<artifactId>utility</artifactId>
+    	<version>0.1</version>
+	</dependency>
     <dependency>
-        <groupId>tomcat</groupId>
-        <artifactId>jasper-runtime</artifactId>
-        <version>5.5.23</version>
-        <scope>provided</scope>
-    </dependency>
-
+    	<groupId>acume.pcsa</groupId>
+    	<artifactId>pcsaudf</artifactId>
+    	<version>0.1</version>
+	</dependency>
 <dependency>
 <groupId>com.guavus.acume</groupId>
 <artifactId>core</artifactId>
@@ -115,17 +112,19 @@
                         <groupId>user-management</groupId>
                         <artifactId>user-management</artifactId>
                         <excludes>
-			    					 <exclude>WEB-INF/lib/log4j-*.jar</exclude>  
-                            <exclude>WEB-INF/lib/servlet-api*.jar</exclude>
-									 <exclude>WEB-INF/lib/guava*.jar</exclude>
-                                     <exclude>WEB-INF/lib/jasper-compiler*.jar</exclude>
-                                     <exclude>WEB-INF/lib/jasper-runtime*.jar</exclude>
-				     <exclude>WEB-INF/lib/xercesImpl*.jar</exclude>
-				     <exclude>WEB-INF/lib/xml-apis*.jar</exclude>
-                     <exclude>WEB-INF/lib/logback-*.jar</exclude>
+        					 <exclude>WEB-INF/lib/log4j-*.jar</exclude>  
+                             <exclude>WEB-INF/lib/servlet-api*.jar</exclude>
+    						 <exclude>WEB-INF/lib/guava*.jar</exclude>
+                             <exclude>WEB-INF/lib/jasper-compiler*.jar</exclude>
+                             <exclude>WEB-INF/lib/jasper-runtime*.jar</exclude>
+                             <exclude>WEB-INF/lib/xercesImpl*.jar</exclude>
+                             <exclude>WEB-INF/lib/xml-apis*.jar</exclude>
+    	                     <exclude>WEB-INF/lib/logback-*.jar</exclude>
                         </excludes>
                     </overlay>
+
                 </overlays>
+
             </configuration>
         </plugin>
 </plugins>
