RIX-3659:session timeout handled in web.xml only. removing properties from shiro.ini
Former-commit-id: 2c655a3a23903f32fd027f101a2f4328ca496b04

--- a/war/src/main/resources/shiro.ini
+++ b/war/src/main/resources/shiro.ini
@@ -43,8 +43,8 @@ securityManager.authorizer.permissionResolver = $globalPermissionResolver
 
 #myRealm.connectionTimeout = 30000
 #myRealm.credentialsMatcher = $sha256Matcher
-securityManager.sessionMode=native
-securityManager.sessionManager.globalSessionTimeout = 3600000
+#securityManager.sessionMode=native
+#securityManager.sessionManager.globalSessionTimeout = 3600000
 
 [users]
 # The 'users' section is for simple deployments
