--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -222,7 +222,10 @@
 	<url-pattern>/queryresponse/dataAvailability</url-pattern>
   	</servlet-mapping>
 
-  	
+  	<session-config>
+       <session-timeout>60</session-timeout>
+    </session-config>
+    
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
