--- a/core/pom.xml
+++ b/core/pom.xml
@@ -149,12 +149,12 @@
 				</exclusion>
 				<exclusion>
 					<groupId>org.apache.logging.log4j</groupId>
-                        		<artifactId>log4j-core</artifactId>
-                		</exclusion>
+					<artifactId>log4j-core</artifactId>
+				</exclusion>
 				<exclusion>
-                        		<groupId>log4j</groupId>
-                        		<artifactId>log4j</artifactId>
-                		</exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
                 <exclusion>
 					<groupId>ch.qos.logback</groupId>
 					<artifactId>logback-access</artifactId>
@@ -294,6 +294,56 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- UI jars. Flex and blazeds -->
+		<dependency>
+			<groupId>com.adobe.blazeds</groupId>
+			<artifactId>blazeds-core</artifactId>
+			<version>3.2.0.3978</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.adobe.blazeds</groupId>
+			<artifactId>blazeds-custom-logging</artifactId>
+			<version>3.2.0.3978</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.adobe.blazeds</groupId>
+			<artifactId>flex-messaging-common</artifactId>
+			<version>3.2.0.3978</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>com.adobe.blazeds</groupId>
+			<artifactId>flex-messaging-core</artifactId>
+			<version>3.2.0.3978</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>com.adobe.blazeds</groupId>
+			<artifactId>flex-messaging-opt</artifactId>
+			<version>3.2.0.3978</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>com.adobe.blazeds</groupId>
+			<artifactId>flex-messaging-proxy</artifactId>
+			<version>3.2.0.3978</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>com.adobe.blazeds</groupId>
+			<artifactId>flex-messaging-remoting</artifactId>
+			<version>3.2.0.3978</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>com.adobe.blazeds</groupId>
+			<artifactId>flex-rds-server</artifactId>
+			<version>3.2.0.3978</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
