ACU-658: Creating property for insta version in cache pom.xml
Former-commit-id: fe37d8673a2060a96d7a659b5f2dfcf83d6c257c

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <properties>
         <pversion>0.1-SNAPSHOT</pversion>
         <pudfversion>0.0.1-SNAPSHOT</pudfversion>
+        <pinstaversion>platform5.0</pinstaversion>
         </properties>
         </profile>
         </profiles>
