ACU-754: Making acume.conf and cli according to multiple datasource. Some refactoring too
Former-commit-id: 4cd974fa916d17c99616c87a2fdf86bb01a0f2ff

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
            <activeByDefault>true</activeByDefault>
         </activation>
         <properties>
-        <pversion>0.1-SNAPSHOT</pversion>
+        <pversion>platform5.2</pversion>
         <pudfversion>0.0.1-SNAPSHOT</pudfversion>
         <pinstaversion>platform5.2</pinstaversion>
         </properties>
