--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -1,46 +1,71 @@
-acume.super.user						$CLI_REPLACE_ACUMESUPERUSER$
-acume.resolver							$CLI_REPLACE_ACUMESPRINGRESOLVER$
-acume.max.query.log.record					$CLI_REPLACE_ACUMEMAXQUERYLOGRECORD$
-acume.cache.baselayer.businesscubexml 				$CLI_REPLACE_CACHEBASELAYERBUSINESSCUBEXML$
-acume.cache.baselayer.storagetype				$CLI_REPLACE_CACHEBASELAYERSTORAGETYPE$
-acume.cache.baselayer.cubedefinitionxml 			$CLI_REPLACE_CACHEBASELAYERCUBEDEFINITIONXML$
-acume.cache.execute.qltype 					$CLI_REPLACE_CACHEEXECUTEQLTYPE$
+#CONF-ACUME Global values. Variable names start with Acume
+
+acume.global.super.user						$CLI_REPLACE_ACUMESUPERUSER$
+acume.global.resolver						$CLI_REPLACE_ACUMESPRINGRESOLVER$
+acume.global.max.query.log.record				$CLI_REPLACE_ACUMEMAXQUERYLOGRECORD$
+acume.global.baselayer.businesscubexml 				$CLI_REPLACE_ACUMEBUSINESSCUBEXML$
+acume.global.baselayer.cubedefinitionxml 			$CLI_REPLACE_ACUMECUBEDEFINITIONXML$
+acume.global.timezonedbPath 					$CLI_REPLACE_ACUMETIMEZONEDBPATH$
+acume.global.timezone 						$CLI_REPLACE_ACUMETIMEZONE$
+acume.global.backend.dbname					$CLI_REPLACE_ACUMEDBNAME$
+acume.global.enableJDBCServer 					$CLI_REPLACE_ACUMEENABLEJDBCSERVER$
+acume.global.app.config 					$CLI_REPLACE_ACUMEAPPCONFIG$
+acume.global.binsource 						$CLI_REPLACE_ACUMEBINSOURCE$
+acume.global.udf.configurationxml 				$CLI_REPLACE_ACUMEUDFCONFIGURATIONXML$
+acume.global.basegranularity 					$CLI_REPLACE_ACUMEBASEGRANULARITY$
+acume.global.query.timeout					$CLI_REPLACE_ACUMEQUERYTIMEOUT$ 		
+acume.global.classification.max.allowedQueries			$CLI_REPLACE_ACUMECLASSIFICATIONMAXALLOWEDQUERIES$
+acume.global.scheduler.querypoolpolicyclass			$CLI_REPLACE_ACUMESCHEDULERQUERYPOOLPOLICYCLASS$
+acume.global.scheduler.schedulerpolicyclass 			$CLI_REPLACE_ACUMESCHEDULERPOLICYCLASS$
+acume.global.scheduler.prefetchTaskRetryIntervalInMillis	$CLI_REPLACE_ACUMESCHEDULERPREFETCHTASKRETRYINTERVAL$
+acume.global.scheduler.threadPoolSize				$CLI_REPLACE_ACUMESCHEDULERTHREADPOOLSIZE$
+acume.global.scheduler.enable					$CLI_REPLACE_ACUMESCHEDULERENABLE$
+acume.global.scheduler.variableRetentionMap			$CLI_REPLACE_ACUMESCHEDULERVARIABLERETENTIONMAP$
+acume.global.scheduler.variableRetentionCombinePoints		$CLI_REPLACE_ACUMESCHEDULERVARIABLERETENTIONCOMBINEPOINTS$
+acume.global.scheduler.queryPrefetchTaskNoOfRetries 		$CLI_REPLACE_ACUMESCHEDULERQUERYPREFETCHTASKNUMRETRIES$
+acume.global.scheduler.maxSegmentDuration			$CLI_REPLACE_ACUMESCHEDULERMAXSEGMENTDURATION$
+acume.global.scheduler.checkInterval				$CLI_REPLACE_ACUMESCHEDULERCHECKINTERVAL$
+acume.global.scheduler.query.timeout                           	$CLI_REPLACE_ACUMESCHEDULERQUERYTIMEOUT$
+acume.global.insta.comboPoints					$CLI_REPLACE_ACUMEINSTACOMBOPOINTS$
+acume.global.insta.availability.poll.interval                   $CLI_REPLACE_ACUMEINSTAAVAILABILITYPOLLINTERVAL$
+acume.global.cache.base.directory				$CLI_REPLACE_ACUMECACHEBASEDIRECTORY$
+acume.global.cache.directory					$CLI_REPLACE_ACUMECACHEDIRECTORY$
+acume.global.thread.pool.size					$CLI_REPLACE_ACUMETHREADPOOLSIZE$
+
+
+
+#CONF-CACHE-1 Values specific to cache. Variable names start with CACHE
+
+acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_CACHETIMESERIESLEVELPOLICYMAP$
+acume.core.disable.total.query 					$CLI_REPLACE_CACHEDISABLETOTALQUERY$
 acume.cache.rrcache.loader 					$CLI_REPLACE_CACHERRCACHELOADER$
-acume.cache.core.rrcacheconcurrenylevel 			$CLI_REPLACE_CACHECORERRCACHECONCURRENYLEVEL$
-acume.cache.core.rrcachesize 				        $CLI_REPLACE_CACHECORERRCACHESIZE$
-acume.cache.backend.dbname					$CLI_REPLACE_CACHEDBNAME$
-acume.cache.default.cache.type					$CLI_REPLACE_ACUMEDEFAULTCACHETYPE$
-acume.cache.core.timezonedbPath 				$CLI_REPLACE_TIMEZONEDBPATH$
-acume.cache.sql.corrector 					$CLI_REPLACE_SQLCORRECTOR$
-acume.cache.sql.parser 						$CLI_REPLACE_SQLPARSER$
-acume.cache.singleentity.cache.size 				$CLI_REPLACE_SINGLEENTITYCACHESIZE$
-acume.cache.type.config.classname 				$CLI_REPLACE_CACHETYPECONFIGCLASS$
-acume.core.global.timezone 					$CLI_REPLACE_CACHECORETIMEZONE$
-acume.core.enableJDBCServer 					$CLI_REPLACE_COREENABLEJDBCSERVER$
-acume.core.app.config 						$CLI_REPLACE_ACUMECOREAPPCONFIG$
-acume.core.scheduler.schedulerpolicyclass 			$CLI_REPLACE_CACHESCHEDULERPOLICY$
-acume.core.global.binsource 					$CLI_REPLACE_ACUMEBINSOURCE$
-acume.core.sql.query.engine					$CLI_REPLACE_COREQUERYENGINE$
-acume.core.udf.configurationxml 				$CLI_REPLACE_COREUDFCONFIGURATIONXML$
-acume.core.querypoolpolicyclass					$CLI_REPLACE_SCHEDULERPOLICYCLASS$
-acume.core.global.levelpolicymap 				$CLI_REPLACE_LEVELPOLICYMAP$
-acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_TIMESERIESLEVELPOLICYMAP$
-acume.core.global.basegranularity 				$CLI_REPLACE_BASEGRANULARITY$
-acume.core.global.evictionpolicyclass 				$CLI_REPLACE_EVICTIONPOLICYCLASS$
-acume.core.disable.total.query 					$CLI_REPLACE_DISABLETOTALQUERY$
-acume.core.query.timeout					$CLI_REPLACE_QUERYTIMEOUT$ 							
-acume.core.classification.max.allowedQueries			$CLI_REPLACE_CLASSIFICATIONMAXALLOWEDQUERIES$
-acume.scheduler.prefetchTaskRetryIntervalInMillis		$CLI_REPLACE_SCHEDULERPREFETCHTASKRETRYINTERVAL$
-acume.scheduler.threadPoolSize					$CLI_REPLACE_SCHEDULERTHREADPOOLSIZE$
-acume.scheduler.enable						$CLI_REPLACE_SCHEDULERENABLE$
-acume.scheduler.variableRetentionMap				$CLI_REPLACE_SCHEDULERVARIABLERETENTIONMAP$
-acume.scheduler.variableRetentionCombinePoints			$CLI_REPLACE_SCHEDULERVARIABLERETENTIONCOMBINEPOINTS$
-acume.scheduler.queryPrefetchTaskNoOfRetries 			$CLI_REPLACE_SCHEDULERQUERYPREFETCHTASKNUMRETRIES$
-acume.scheduler.maxSegmentDuration				$CLI_REPLACE_SCHEDULERMAXSEGMENTDURATION$
-acume.scheduler.checkInterval					$CLI_REPLACE_SCHEDULERCHECKINTERVAL$
-acume.scheduler.query.timeout                           	$CLI_REPLACE_SCHEDULERQUERYTIMEOUT$
-acume.insta.comboPoints						$CLI_REPLACE_INSTACOMBOPOINTS$
-acume.insta.availability.poll.interval                          $CLI_REPLACE_INSTAAVAILABILITYPOLLINTERVAL$
-acume.core.cache.base.directory					$CLI_REPLACE_CACHEBASEDIRECTORY$
-acume.core.cache.directory					$CLI_REPLACE_CACHEDIRECTORY$
-acume.core.thread.pool.size					$CLI_REPLACE_ACUMECORETHREADPOOLSIZE$
+acume.cache.rrcacheconcurrenylevel 				$CLI_REPLACE_CACHERRCACHECONCURRENYLEVEL$
+acume.cache.rrcachesize 				        $CLI_REPLACE_CACHERRCACHESIZE$
+acume.cache.baselayer.storagetype				$CLI_REPLACE_CACHEBASELAYERSTORAGETYPE$
+acume.cache.execute.qltype 					$CLI_REPLACE_CACHEEXECUTEQLTYPE$
+acume.cache.default.cache.type					$CLI_REPLACE_CACHEDEFAULTCACHETYPE$
+acume.cache.sql.corrector 					$CLI_REPLACE_CACHESQLCORRECTOR$
+acume.cache.sql.parser 						$CLI_REPLACE_CACHESQLPARSER$
+acume.cache.singleentity.cache.size 				$CLI_REPLACE_CACHESINGLEENTITYCACHESIZE$
+acume.cache.type.config.classname 				$CLI_REPLACE_CACHECACHETYPECONFIGCLASS$
+acume.cache.global.levelpolicymap 				$CLI_REPLACE_CACHELEVELPOLICYMAP$
+acume.cache.global.evictionpolicyclass 				$CLI_REPLACE_CACHEEVICTIONPOLICYCLASS$
+
+
+
+
+#CONF-THINCLIENT-1 Variables specific to thin-client. Variable names start with THINCLIENT
+acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_THINCLIENTTIMESERIESLEVELPOLICYMAP$
+acume.core.disable.total.query 					$CLI_REPLACE_THINCLIENTDISABLETOTALQUERY$
+acume.core.use.insta                                      	$CLI_REPLACE_THINCLIENTUSEINSTA$
+acume.cache.rrcache.loader 					$CLI_REPLACE_THINCLIENTRRCACHELOADER$
+acume.cache.rrcacheconcurrenylevel 				$CLI_REPLACE_THINCLIENTRRCACHECONCURRENYLEVEL$
+acume.cache.rrcachesize 				        $CLI_REPLACE_THINCLIENTRRCACHESIZE$
+acume.cache.baselayer.storagetype                               $CLI_REPLACE_THINCLIENTBASELAYERSTORAGETYPE$
+acume.cache.execute.qltype 					$CLI_REPLACE_THINCLIENTEXECUTEQLTYPE$
+acume.cache.delete.firstbinpersistedtime                        $CLI_REPLACE_THINCLIENTCACHEDELETEFIRSTBINPERSISTEDTIME$
+acume.cache.delete.lastbinpersistedtime                         $CLI_REPLACE_THINCLIENTCACHEDELETELASTBINPERSISTEDTIME$
+
+
+
+#CONF-HBASE-1 Variables specific to Hbase. Variable names start with HBASE
