ACU-754: Correcting CLI properties names and some refactoring
Former-commit-id: 11a7d5a2bd4e2e0b91a0ab77e8209ab6ed46c8d0

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -53,16 +53,16 @@ acume.cache.global.evictionpolicyclass 				$CLI_REPLACE_CACHEEVICTIONPOLICYCLASS
 
 
 
-#CONF-THINCLIENT-1 Variables specific to thin-client. Variable names start with THINCLIENT
-acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_THINCLIENTTIMESERIESLEVELPOLICYMAP$
-acume.core.disable.total.query 					$CLI_REPLACE_THINCLIENTDISABLETOTALQUERY$
-acume.core.use.insta                                      	$CLI_REPLACE_THINCLIENTUSEINSTA$
-acume.cache.rrcache.loader 					$CLI_REPLACE_THINCLIENTRRCACHELOADER$
-acume.cache.rrcacheconcurrenylevel 				$CLI_REPLACE_THINCLIENTRRCACHECONCURRENYLEVEL$
-acume.cache.rrcachesize 				        $CLI_REPLACE_THINCLIENTRRCACHESIZE$
-acume.cache.baselayer.storagetype                               $CLI_REPLACE_THINCLIENTBASELAYERSTORAGETYPE$
-acume.cache.delete.firstbinpersistedtime                        $CLI_REPLACE_THINCLIENTCACHEDELETEFIRSTBINPERSISTEDTIME$
-acume.cache.delete.lastbinpersistedtime                         $CLI_REPLACE_THINCLIENTCACHEDELETELASTBINPERSISTEDTIME$
+#CONF-HIVE-1 Variables specific to thin-client. Variable names start with HIVE
+acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_HIVETIMESERIESLEVELPOLICYMAP$
+acume.core.disable.total.query 					$CLI_REPLACE_HIVEDISABLETOTALQUERY$
+acume.core.use.insta                                      	$CLI_REPLACE_HIVEUSEINSTA$
+acume.cache.rrcache.loader 					$CLI_REPLACE_HIVERRCACHELOADER$
+acume.cache.rrcacheconcurrenylevel 				$CLI_REPLACE_HIVERRCACHECONCURRENYLEVEL$
+acume.cache.rrcachesize 				        $CLI_REPLACE_HIVERRCACHESIZE$
+acume.cache.baselayer.storagetype                               $CLI_REPLACE_HIVEBASELAYERSTORAGETYPE$
+acume.cache.delete.firstbinpersistedtime                        $CLI_REPLACE_HIVECACHEDELETEFIRSTBINPERSISTEDTIME$
+acume.cache.delete.lastbinpersistedtime                         $CLI_REPLACE_HIVECACHEDELETELASTBINPERSISTEDTIME$
 
 
 
