ACU-754: Making acume.conf to acume.ini to support multiple datasources
Former-commit-id: 141401535468496070e0d39aa1b2a94a94f37d59

--- a/war/src/main/resources/acume.ini
+++ b/war/src/main/resources/acume.ini
@@ -1,5 +1,6 @@
-#CONF-ACUME Global values. Variable names start with Acume
+;Values common to all Variable names start with common
 
+[common]
 acume.global.super.user						$CLI_REPLACE_ACUMESUPERUSER$
 acume.global.resolver						$CLI_REPLACE_ACUMESPRINGRESOLVER$
 acume.global.max.query.log.record				$CLI_REPLACE_ACUMEMAXQUERYLOGRECORD$
@@ -13,7 +14,7 @@ acume.global.app.config 					$CLI_REPLACE_ACUMEAPPCONFIG$
 acume.global.binsource 						$CLI_REPLACE_ACUMEBINSOURCE$
 acume.global.udf.configurationxml 				$CLI_REPLACE_ACUMEUDFCONFIGURATIONXML$
 acume.global.basegranularity 					$CLI_REPLACE_ACUMEBASEGRANULARITY$
-acume.global.query.timeout					$CLI_REPLACE_ACUMEQUERYTIMEOUT$ 		
+acume.global.query.timeout					$CLI_REPLACE_ACUMEQUERYTIMEOUT$
 acume.global.classification.max.allowedQueries			$CLI_REPLACE_ACUMECLASSIFICATIONMAXALLOWEDQUERIES$
 acume.global.scheduler.querypoolpolicyclass			$CLI_REPLACE_ACUMESCHEDULERQUERYPOOLPOLICYCLASS$
 acume.global.scheduler.schedulerpolicyclass 			$CLI_REPLACE_ACUMESCHEDULERPOLICYCLASS$
@@ -33,9 +34,9 @@ acume.global.cache.directory					$CLI_REPLACE_ACUMECACHEDIRECTORY$
 acume.global.thread.pool.size					$CLI_REPLACE_ACUMETHREADPOOLSIZE$
 
 
+;Values specific to cache. Variable names start with CACHE
 
-#CONF-CACHE-1 Values specific to cache. Variable names start with CACHE
-
+[cache]
 acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_CACHETIMESERIESLEVELPOLICYMAP$
 acume.core.disable.total.query 					$CLI_REPLACE_CACHEDISABLETOTALQUERY$
 acume.cache.rrcache.loader 					$CLI_REPLACE_CACHERRCACHELOADER$
@@ -51,9 +52,9 @@ acume.cache.global.levelpolicymap 				$CLI_REPLACE_CACHELEVELPOLICYMAP$
 acume.cache.global.evictionpolicyclass 				$CLI_REPLACE_CACHEEVICTIONPOLICYCLASS$
 
 
+;Variables specific to thin-client. Variable names start with HIVE
 
-
-#CONF-HIVE-1 Variables specific to thin-client. Variable names start with HIVE
+[hive]
 acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_HIVETIMESERIESLEVELPOLICYMAP$
 acume.core.disable.total.query 					$CLI_REPLACE_HIVEDISABLETOTALQUERY$
 acume.core.use.insta                                      	$CLI_REPLACE_HIVEUSEINSTA$
@@ -65,5 +66,5 @@ acume.cache.delete.firstbinpersistedtime                        $CLI_REPLACE_HIV
 acume.cache.delete.lastbinpersistedtime                         $CLI_REPLACE_HIVECACHEDELETELASTBINPERSISTEDTIME$
 
 
-
-#CONF-HBASE-1 Variables specific to Hbase. Variable names start with HBASE
+;Variables specific to Hbase. Variable names start with HBASE
+[hbase-1]
