ACU-754: Added HBASE related configs
Former-commit-id: e42e557291c976ddb5370eb20d8c12401528b217

--- a/war/src/main/resources/acume.ini
+++ b/war/src/main/resources/acume.ini
@@ -68,3 +68,8 @@ acume.cache.delete.lastbinpersistedtime                         $CLI_REPLACE_HIV
 
 ;Variables specific to Hbase. Variable names start with HBASE
 [hbase-1]
+acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_HBASETIMESERIESLEVELPOLICYMAP$
+acume.core.disable.total.query 					$CLI_REPLACE_HBASEDISABLETOTALQUERY$
+acume.cache.rrcache.loader 					$CLI_REPLACE_HBASERRCACHELOADER$
+acume.cache.rrcacheconcurrenylevel 				$CLI_REPLACE_HBASERRCACHECONCURRENYLEVEL$
+acume.cache.rrcachesize 				        $CLI_REPLACE_HBASERRCACHESIZE$
