ACU-754: Adding hbase context
Former-commit-id: 647460ac49fb269a007ab833bc8a3259363186a6

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -252,6 +252,18 @@
 			<version>1.3.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-hbase_2.10</artifactId>
+			<version>1.4.0-SNAPSHOT</version>
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>servlet-api</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 		<!-- AspectJ -->
 		<dependency>
