ACU-529: Adding CLI proeprties of use insta
Former-commit-id: 4fcfa915a6c152e0188e8108c3477c6b22852d56

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -44,3 +44,4 @@ acume.insta.availability.poll.interval                          $CLI_REPLACE_INS
 acume.core.cache.base.directory					$CLI_REPLACE_CACHEBASEDIRECTORY$
 acume.core.cache.directory					$CLI_REPLACE_CACHEDIRECTORY$
 acume.core.thread.pool.size					$CLI_REPLACE_ACUMECORETHREADPOOLSIZE$
+acume.core.cache.use.insta  					$CLI_REPLACE_acumeCoreCacheUseInsta$
