ACU-777: update pom.xml.
Former-commit-id: 2d2c744bb27bbc56f3e3c34f6f2d89fcd93ac491

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -223,7 +223,7 @@
 		<dependency> <!-- Spark dependency -->
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.10</artifactId>
-			<version>1.2.1-1a</version>
+			<version>1.2.1</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>  <!-- declare the exclusion here -->
