ACU-529: Passing datasourceName to cacheconf
Former-commit-id: 3b6d695ca6883039ea59bcd279fb5b3b6ee8c50b

--- a/war/src/main/resources/acume.ini
+++ b/war/src/main/resources/acume.ini
@@ -67,7 +67,7 @@ acume.cache.delete.lastbinpersistedtime                         $CLI_REPLACE_HIV
 
 
 ;Variables specific to Hbase. Variable names start with HBASE
-[hbase-1]
+[hbase]
 acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_HBASETIMESERIESLEVELPOLICYMAP$
 acume.core.disable.total.query 					$CLI_REPLACE_HBASEDISABLETOTALQUERY$
 acume.cache.rrcache.loader 					$CLI_REPLACE_HBASERRCACHELOADER$
