--- a/war/src/main/resources/acume.ini
+++ b/war/src/main/resources/acume.ini
@@ -20,7 +20,6 @@ acume.global.scheduler.querypoolpolicyclass			$CLI_REPLACE_ACUMESCHEDULERQUERYPO
 acume.global.scheduler.schedulerpolicyclass 			$CLI_REPLACE_ACUMESCHEDULERPOLICYCLASS$
 acume.global.scheduler.prefetchTaskRetryIntervalInMillis	$CLI_REPLACE_ACUMESCHEDULERPREFETCHTASKRETRYINTERVAL$
 acume.global.scheduler.threadPoolSize				$CLI_REPLACE_ACUMESCHEDULERTHREADPOOLSIZE$
-acume.global.scheduler.enable					$CLI_REPLACE_ACUMESCHEDULERENABLE$
 acume.global.scheduler.variableRetentionMap			$CLI_REPLACE_ACUMESCHEDULERVARIABLERETENTIONMAP$
 acume.global.scheduler.variableRetentionCombinePoints		$CLI_REPLACE_ACUMESCHEDULERVARIABLERETENTIONCOMBINEPOINTS$
 acume.global.scheduler.queryPrefetchTaskNoOfRetries 		$CLI_REPLACE_ACUMESCHEDULERQUERYPREFETCHTASKNUMRETRIES$
@@ -50,6 +49,7 @@ acume.cache.singleentity.cache.size 				$CLI_REPLACE_CACHESINGLEENTITYCACHESIZE$
 acume.cache.type.config.classname 				$CLI_REPLACE_CACHECACHETYPECONFIGCLASS$
 acume.cache.global.levelpolicymap 				$CLI_REPLACE_CACHELEVELPOLICYMAP$
 acume.cache.global.evictionpolicyclass 				$CLI_REPLACE_CACHEEVICTIONPOLICYCLASS$
+acume.scheduler.enable					$CLI_REPLACE_CACHESCHEDULERENABLE$
 
 
 ;Variables specific to thin-client. Variable names start with HIVE
@@ -64,6 +64,7 @@ acume.cache.rrcachesize 				        $CLI_REPLACE_HIVERRCACHESIZE$
 acume.cache.baselayer.storagetype                               $CLI_REPLACE_HIVEBASELAYERSTORAGETYPE$
 acume.cache.delete.firstbinpersistedtime                        $CLI_REPLACE_HIVECACHEDELETEFIRSTBINPERSISTEDTIME$
 acume.cache.delete.lastbinpersistedtime                         $CLI_REPLACE_HIVECACHEDELETELASTBINPERSISTEDTIME$
+acume.scheduler.enable					$CLI_REPLACE_HIVESCHEDULERENABLE$
 
 
 ;Variables specific to Hbase. Variable names start with HBASE
@@ -73,3 +74,4 @@ acume.core.disable.total.query 					$CLI_REPLACE_HBASEDISABLETOTALQUERY$
 acume.cache.rrcache.loader 					$CLI_REPLACE_HBASERRCACHELOADER$
 acume.cache.rrcacheconcurrenylevel 				$CLI_REPLACE_HBASERRCACHECONCURRENYLEVEL$
 acume.cache.rrcachesize 				        $CLI_REPLACE_HBASERRCACHESIZE$
+acume.scheduler.enable					$CLI_REPLACE_HBASESCHEDULERENABLE$
