ACU-529: Changing the interface to add datasource. Added QBFactory
Former-commit-id: a008cc65a4f9f88841caa88f9463d8747311bee0

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -292,7 +292,7 @@
 		<dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>crux2.0</artifactId>
-			<version>${pinstaversion}</version>
+			<version>${pversion}</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
