--- a/war/pom.xml
+++ b/war/pom.xml
@@ -99,6 +99,39 @@
 	<artifactId>asm-all</artifactId>
 	<version>3.3.1</version>
 </dependency>
+
+<dependency>
+    <groupId>org.codehaus.jackson</groupId>
+  <artifactId>jackson-mapper-asl</artifactId>
+  <version>1.5.5</version>
+  <scope>provided</scope>
+</dependency>
+
+
+<dependency>
+    <groupId>org.codehaus.jackson</groupId>
+  <artifactId>jackson-core-asl</artifactId>
+  <version>1.5.5</version>
+  <scope>provided</scope>
+</dependency>
+ 
+
+<dependency>
+    <groupId>org.codehaus.jackson</groupId>
+  <artifactId>jackson-jaxrs</artifactId>
+  <version>1.5.5</version>
+  <scope>provided</scope>
+</dependency>
+ 
+
+<dependency>
+    <groupId>org.codehaus.jackson</groupId>
+  <artifactId>jackson-xc</artifactId>
+  <version>1.5.5</version>
+  <scope>provided</scope>
+</dependency>
+  
+
 </dependencies>
 <build>
     <plugins>
