ACU-529: Correcting the version numbers
Former-commit-id: 3cd219f767ddefb4bcb693b17794769d283348ee

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -287,7 +287,7 @@
 		<dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>QueryBuilder</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>${pversion}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.guavus</groupId>
