ACU-529: Removed jackson jar war
Former-commit-id: 08a94850d2b340a34f9b91a59d0fc690661ea305

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -133,6 +133,7 @@
   
 
 </dependencies>
+
 <build>
     <plugins>
         <!-- put aside some unwanted jars from war...-->
@@ -154,6 +155,7 @@
                              <exclude>WEB-INF/lib/xercesImpl*.jar</exclude>
                              <exclude>WEB-INF/lib/xml-apis*.jar</exclude>
     	                     <exclude>WEB-INF/lib/logback-*.jar</exclude>
+                           <exclude>WEB-INF/lib/jackson-*.jar</exclude>
                         </excludes>
                     </overlay>
 
