ACU-754: Making threadlocal common to all instead of per acumecontext. Some bug fixes
Former-commit-id: 55ae6f64e1c288cfe3d9676746a77dd2e8541598

--- a/war/src/main/resources/acume.ini
+++ b/war/src/main/resources/acume.ini
@@ -31,6 +31,8 @@ acume.global.insta.availability.poll.interval                   $CLI_REPLACE_ACU
 acume.global.cache.base.directory				$CLI_REPLACE_ACUMECACHEBASEDIRECTORY$
 acume.global.cache.directory					$CLI_REPLACE_ACUMECACHEDIRECTORY$
 acume.global.thread.pool.size					$CLI_REPLACE_ACUMETHREADPOOLSIZE$
+acume.global.datasource.interpreter.policy			$CLI_REPLACE_ACUMEDATASOURCEINTERPRETERPOLICY$
+acume.global.default.datasource					$CLI_REPLACE_ACUMEDEFAULTDATASOURCE$
 
 
 ;Values specific to cache. Variable names start with CACHE
