Revert "ACU-777: version for spark changed."
This reverts commit 3740b353e1a78ca81bf22a1d7be909907fa168cb [formerly 8f617d217054aa3515d2078976bc81b920a6d199].

Revert "ACU-777: TMO partial HA feature first draft."

This reverts commit 607d697140306ec96cba940411a2a87f4374dbc1 [formerly d9cfc0c4c1ea98cf312e2bdd341d8bc8cfe25fbf].

Conflicts:

	cache/pom.xml
	cache/src/main/scala/com/guavus/acume/cache/common/ConfConstants.scala
	core/pom.xml
	core/src/main/scala/com/guavus/acume/core/listener/AcumeSparkListener.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/AcumeCacheAvailabiltyPolicy.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/ICacheAvailabilityPolicy.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/QueryPrefetchTaskCombiner.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/QueryRequestPrefetchTaskManager.scala

Revert "ACU-777: make changes for bringing cache availability map to normal."

This reverts commit 19ff61f7ad697147eb56161a620cf0343f6a5506 [formerly 0d2150f30f3f4976061151636788662af3587f1e].

Conflicts:

	core/pom.xml
	core/src/main/scala/com/guavus/acume/core/scheduler/AcumeCacheAvailabiltyPolicy.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/ICacheAvailabilityPolicy.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/QueryPrefetchTaskCombiner.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/QueryRequestPrefetchTaskManager.scala

Revert "ACU-777: partial HA final draft before scrum.;"

This reverts commit e1021d4e0962a8299cb36f456d421f51d3125794 [formerly 3e11db6644a35ed76eac223d5e6bf741d5c6706a].

Conflicts:

	cache/src/main/scala/com/guavus/acume/cache/core/AcumeTreeCache.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/AcumeCacheAvailabiltyPolicy.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/ICacheAvailabilityPolicy.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/QueryPrefetchTaskCombiner.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.guavus</groupId>
 	<artifactId>acume</artifactId>
-	<version>platform5.0</version>
+	<version>0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
    <name>Acume Project Parent POM</name>
         <profiles>
