--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.guavus</groupId>
 	<artifactId>acume</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>platform5.0</version>
 	<packaging>pom</packaging>
    <name>Acume Project Parent POM</name>
         <profiles>
