--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -45,3 +45,4 @@ acume.core.cache.base.directory					$CLI_REPLACE_CACHEBASEDIRECTORY$
 acume.core.cache.directory					$CLI_REPLACE_CACHEDIRECTORY$
 acume.core.thread.pool.size					$CLI_REPLACE_ACUMECORETHREADPOOLSIZE$
 acume.core.cache.use.insta  					$CLI_REPLACE_acumeCoreCacheUseInsta$
+acume.core.cache.cacheavailabiltymap.policy  			$CLI_REPLACE_ACUMECORECACHEAVAILABILITYMAPPOLICY$
