ACU-658: Changing pom of war project
Former-commit-id: d3d0237ed488cc7ee663c876a189b6486c97d934

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -30,7 +30,7 @@
 <dependency>
 <groupId>com.guavus.acume</groupId>
 <artifactId>core</artifactId>
-<version>0.1-SNAPSHOT</version>
+<version>platform5.0</version>
 <exclusions>
 	<exclusion>
 		<groupId>org.apache.spark</groupId>
