--- a/war/src/main/resources/spark.properties
+++ b/war/src/main/resources/spark.properties
@@ -7,7 +7,7 @@ spark.app.name	DEFAULT_NAME
 spark.sql.shuffle.partitions 20
 spark.sql.inMemoryColumnarStorage.partitionPruning true
 spark.sql.inMemoryColumnarStorage.compressed true
-spark.executor.extraJavaOptions -Dlog4j.configuration=log4j-executor.properties -XX:+UseG1GC -XX:MetaspaceSize=512m -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintGCDetails -Xloggc:gc.log -XX:AdaptiveSizePolicyOutputInterval=1  -XX:+UseGCLogFileRotation -XX:GCLogFileSize=500M -XX:NumberOfGCLogFiles=1
+spark.executor.extraJavaOptions -Dlog4j.configuration=log4j-executor.properties -XX:+UseG1GC -XX:MetaspaceSize=512m -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintGCDetails -Xloggc:gc.log -XX:AdaptiveSizePolicyOutputInterval=1  -XX:+UseGCLogFileRotation -XX:GCLogFileSize=500M -XX:NumberOfGCLogFiles=1 -XX:-ResizePLAB
 
 spark.eventLog.enabled true
 spark.eventLog.dir hdfs:///spark/events/
