ACU-802: Feature to enable/disable datasource using CLI
Former-commit-id: 33b8fef6964f02c5f95da798ee3da8515034cc6b

--- a/war/src/main/resources/acume.ini
+++ b/war/src/main/resources/acume.ini
@@ -38,6 +38,7 @@ acume.global.default.datasource					$CLI_REPLACE_ACUMEDEFAULTDATASOURCE$
 ;Values specific to cache. Variable names start with CACHE
 
 [cache]
+acume.datasource.enable   		                        $CLI_REPLACE_CACHEDATASOURCEENABLE$
 acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_CACHETIMESERIESLEVELPOLICYMAP$
 acume.core.disable.total.query 					$CLI_REPLACE_CACHEDISABLETOTALQUERY$
 acume.cache.rrcache.loader 					$CLI_REPLACE_CACHERRCACHELOADER$
@@ -54,9 +55,11 @@ acume.cache.global.evictionpolicyclass 				$CLI_REPLACE_CACHEEVICTIONPOLICYCLASS
 acume.scheduler.enable						$CLI_REPLACE_CACHESCHEDULERENABLE$
 
 
+
 ;Variables specific to thin-client. Variable names start with HIVE
 
 [hive]
+acume.datasource.enable 					$CLI_REPLACE_HIVEDATASOURCEENABLE$
 acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_HIVETIMESERIESLEVELPOLICYMAP$
 acume.core.disable.total.query 					$CLI_REPLACE_HIVEDISABLETOTALQUERY$
 acume.core.use.insta                                      	$CLI_REPLACE_HIVEUSEINSTA$
@@ -67,8 +70,10 @@ acume.cache.baselayer.storagetype                               $CLI_REPLACE_HIV
 acume.scheduler.enable						$CLI_REPLACE_HIVESCHEDULERENABLE$
 
 
+
 ;Variables specific to Hbase. Variable names start with HBASE
 [hbase]
+acume.datasource.enable 					$CLI_REPLACE_HBASEDATASOURCEENABLE$
 acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_HBASETIMESERIESLEVELPOLICYMAP$
 acume.core.disable.total.query 					$CLI_REPLACE_HBASEDISABLETOTALQUERY$
 acume.cache.rrcache.loader 					$CLI_REPLACE_HBASERRCACHELOADER$
