ACU-777: version for spark changed.
Conflicts:

	cache/pom.xml
	core/pom.xml

ACU-777: TMO partial HA feature first draft.

Conflicts:

	cache/pom.xml
	cache/src/main/scala/com/guavus/acume/cache/common/ConfConstants.scala
	cache/src/main/scala/com/guavus/acume/cache/core/AcumeFlatSchemaTreeCache.scala
	core/pom.xml
	core/src/main/scala/com/guavus/acume/core/configuration/AcumeAppConfig.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/QueryRequestPrefetchTaskManager.scala
	pom.xml

ACU-777: make changes for bringing cache availability map to normal.

Conflicts:

	core/src/main/scala/com/guavus/acume/core/scheduler/QueryRequestPrefetchTaskManager.scala

ACU-777: partial HA final draft before scrum.;

Conflicts:

	cache/pom.xml
	cache/src/main/scala/com/guavus/acume/cache/core/AcumeFlatSchemaTreeCache.scala
	core/pom.xml
	core/src/main/scala/com/guavus/acume/core/scheduler/AcumeCacheAvailabiltyPolicy.scala

ACU-777: partial ha bug fixes.;

Conflicts:

	cache/pom.xml
	core/pom.xml
	core/src/main/scala/com/guavus/acume/core/AcumeService.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/AcumeCacheAvailabiltyPolicy.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/QueryPrefetchTask.scala

ACU-777: partial ha bug fixes-2.

Conflicts:

	core/src/main/scala/com/guavus/acume/core/listener/AcumeSparkListener.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/AcumeCacheAvailabiltyPolicy.scala
	core/src/main/scala/com/guavus/acume/core/scheduler/ICacheAvailabilityPolicy.scala

ACU-777: fixing non-caching issue.;

Conflicts:

	cache/src/main/scala/com/guavus/acume/cache/core/AcumeFlatSchemaTreeCache.scala
	cache/src/main/scala/com/guavus/acume/cache/core/AcumeTreeCache.scala
	cache/src/main/scala/com/guavus/acume/cache/core/AcumeTreeCacheValue.scala
	core/src/main/scala/com/guavus/acume/core/listener/AcumeSparkListener.scala

ACU-777: merging with platform 5.2.

ACU-806: Not adding datasourceName to cachePointName

ACU-807: Avoiding the none.ge

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.guavus</groupId>
 	<artifactId>acume</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>platform5.2</version>
 	<packaging>pom</packaging>
    <name>Acume Project Parent POM</name>
         <profiles>
@@ -15,7 +15,7 @@
         </activation>
         <properties>
         <pversion>platform5.2</pversion>
-        <pudfversion>0.0.1-SNAPSHOT</pudfversion>
+        <pudfversion>platform5.2</pudfversion>
         <pinstaversion>platform5.2</pinstaversion>
         </properties>
         </profile>
