--- a/war/src/main/resources/acume.ini
+++ b/war/src/main/resources/acume.ini
@@ -33,6 +33,7 @@ acume.global.cache.directory					$CLI_REPLACE_ACUMECACHEDIRECTORY$
 acume.global.thread.pool.size					$CLI_REPLACE_ACUMETHREADPOOLSIZE$
 acume.global.datasource.interpreter.policy			$CLI_REPLACE_ACUMEDATASOURCEINTERPRETERPOLICY$
 acume.global.default.datasource					$CLI_REPLACE_ACUMEDEFAULTDATASOURCE$
+acume.global.cacheavailabilymapupdatepolicy		$CLI_REPLACE_ACUMECORECACHEAVAILABILITYMAPPOLICY$
 
 
 ;Values specific to cache. Variable names start with CACHE
