--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.guavus</groupId>
 		<artifactId>acume</artifactId>
-		<version>0.1-SNAPSHOT</version>
+		<version>platform5.2</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>com.guavus.acume</groupId>
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>com.guavus.acume</groupId>
 			<artifactId>cache</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>${pversion}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.guavus</groupId>
@@ -223,7 +223,7 @@
 		<dependency> <!-- Spark dependency -->
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.10</artifactId>
-			<version>1.3.1</version>
+			<version>1.3.1-gvs-1.0</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>  <!-- declare the exclusion here -->
@@ -243,7 +243,7 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
-			<version>1.3.1-gvs-1.0</version>
+			<version>1.3.1-gvs-1.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -308,7 +308,7 @@
         <dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>attvaludf</artifactId>
-			<version>${pudfversion}</version>
+			<version>platform5.0</version>
 		</dependency>
 
 		<!-- UI jars. Flex and blazeds -->
@@ -504,57 +504,7 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			<!--plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.2</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin-->
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-				<!--plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-dependency-plugin
-										</artifactId>
-										<versionRange>
-											[2.6,)
-										</versionRange>
-										<goals>
-											<goal>
-												copy-dependencies
-											</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin-->
-			</plugins>
-		</pluginManagement>
 	</build>
 </project>
 
