ACU-835: Fixing thick client workfow
Former-commit-id: 94acf0c1d186be4d525a0bae53a4905b17ef70d3

--- a/war/src/main/resources/acume.ini
+++ b/war/src/main/resources/acume.ini
@@ -34,7 +34,8 @@ acume.global.thread.pool.size					$CLI_REPLACE_ACUMETHREADPOOLSIZE$
 acume.global.datasource.interpreter.policy			$CLI_REPLACE_ACUMEDATASOURCEINTERPRETERPOLICY$
 acume.global.default.datasource					$CLI_REPLACE_ACUMEDEFAULTDATASOURCE$
 acume.global.scheduler.cacheavailabilitymapupdatepolicy		$CLI_REPLACE_ACUMECORECACHEAVAILABILITYMAPPOLICY$
-
+acume.global.sql.corrector 					$CLI_REPLACE_ACUMESQLCORRECTOR$
+acume.global.sql.parser 					$CLI_REPLACE_ACUMESQLPARSER$
 
 ;Values specific to cache. Variable names start with CACHE
 
@@ -47,8 +48,6 @@ acume.cache.rrcacheconcurrenylevel 				$CLI_REPLACE_CACHERRCACHECONCURRENYLEVEL$
 acume.cache.rrcachesize 				        $CLI_REPLACE_CACHERRCACHESIZE$
 acume.cache.baselayer.storagetype				$CLI_REPLACE_CACHEBASELAYERSTORAGETYPE$
 acume.cache.default.cache.type					$CLI_REPLACE_CACHEDEFAULTCACHETYPE$
-acume.cache.sql.corrector 					$CLI_REPLACE_CACHESQLCORRECTOR$
-acume.cache.sql.parser 						$CLI_REPLACE_CACHESQLPARSER$
 acume.cache.singleentity.cache.size 				$CLI_REPLACE_CACHESINGLEENTITYCACHESIZE$
 acume.cache.type.config.classname 				$CLI_REPLACE_CACHECACHETYPECONFIGCLASS$
 acume.cache.global.levelpolicymap 				$CLI_REPLACE_CACHELEVELPOLICYMAP$
