ACU-908: Adding bestcube property in acume.ini
Former-commit-id: b33bf23f9e08b49faf0f54ed752c9eb40c4c6732

--- a/war/src/main/resources/acume.ini
+++ b/war/src/main/resources/acume.ini
@@ -54,7 +54,7 @@ acume.cache.type.config.classname 				$CLI_REPLACE_CACHECACHETYPECONFIGCLASS$
 acume.cache.global.levelpolicymap 				$CLI_REPLACE_CACHELEVELPOLICYMAP$
 acume.cache.global.evictionpolicyclass 				$CLI_REPLACE_CACHEEVICTIONPOLICYCLASS$
 acume.scheduler.enable						$CLI_REPLACE_CACHESCHEDULERENABLE$
-
+acume.qb.bestcube.classname					$CLI_REPLACE_CACHEBESTCUBECLASSNAME$
 
 
 ;Variables specific to thin-client. Variable names start with HIVE
@@ -72,7 +72,6 @@ acume.cache.baselayer.storagetype                               $CLI_REPLACE_HIV
 acume.scheduler.enable						$CLI_REPLACE_HIVESCHEDULERENABLE$
 
 
-
 ;Variables specific to Hbase. Variable names start with HBASE
 [hbase]
 acume.datasource.enable 					$CLI_REPLACE_HBASEDATASOURCEENABLE$
@@ -83,3 +82,4 @@ acume.cache.rrcache.loader 					$CLI_REPLACE_HBASERRCACHELOADER$
 acume.cache.rrcacheconcurrenylevel 				$CLI_REPLACE_HBASERRCACHECONCURRENYLEVEL$
 acume.cache.rrcachesize 				        $CLI_REPLACE_HBASERRCACHESIZE$
 acume.scheduler.enable						$CLI_REPLACE_HBASESCHEDULERENABLE$
+acume.qb.bestcube.classname					$CLI_REPLACE_HBASEBESTCUBECLASSNAME$
