--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -187,6 +187,18 @@
     	<servlet-name>ZoneInfo</servlet-name>
     	<servlet-class>com.guavus.acume.core.servlet.ZoneInfoRequestServlet</servlet-class>
   	</servlet>
+  	<servlet>
+  		<servlet-name>InstaAvailability</servlet-name>
+        <servlet-class>com.guavus.acume.core.servlet.InstaAvailabilityRequestServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AcumeAvailability</servlet-name>
+        <servlet-class>com.guavus.acume.core.servlet.AcumeAvailabilityRequestServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UnionizedCache</servlet-name>
+        <servlet-class>com.guavus.acume.core.servlet.UnionizedCacheAvailabilityServlet</servlet-class>
+    </servlet>
   	
   	<servlet-mapping>
     	<servlet-name>Sql</servlet-name>
@@ -217,8 +229,8 @@
 
 	<servlet-mapping>
         <servlet-name>TimeSeriesMultiple</servlet-name>
-        <url-pattern>/queryresponse/timeseriesmultiple</url-pattern>
-        </servlet-mapping>
+    <url-pattern>/queryresponse/timeseriesmultiple</url-pattern>
+    </servlet-mapping>
 
   	<servlet-mapping>
     	<servlet-name>ValidateQuery</servlet-name>
@@ -248,6 +260,18 @@
     	<servlet-name>ZoneInfo</servlet-name>
 	<url-pattern>/queryresponse/zoneInfo</url-pattern>
   	</servlet-mapping>
+  	<servlet-mapping>
+        <servlet-name>InstaAvailability</servlet-name>
+    <url-pattern>/queryresponse/instaAvailability</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AcumeAvailability</servlet-name>
+    <url-pattern>/queryresponse/acumeAvailability</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UnionizedCache</servlet-name>
+    <url-pattern>/queryresponse/unionizedCache</url-pattern>
+    </servlet-mapping>
 
 	<session-config>
        <session-timeout>60</session-timeout>
