--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -195,6 +195,10 @@
         <servlet-name>AcumeAvailability</servlet-name>
         <servlet-class>com.guavus.acume.core.servlet.AcumeAvailabilityRequestServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Logout</servlet-name>
+        <servlet-class>com.guavus.acume.core.servlet.LogoutRequestServlet</servlet-class>
+    </servlet>
   	
   	<servlet-mapping>
     	<servlet-name>Sql</servlet-name>
@@ -263,6 +267,10 @@
     <servlet-mapping>
         <servlet-name>AcumeAvailability</servlet-name>
     <url-pattern>/queryresponse/acumeAvailability</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Logout</servlet-name>
+    <url-pattern>/queryresponse/logout</url-pattern>
     </servlet-mapping>
 
 	<session-config>
