ACU-858: Added densevector udafs, udfs and pom changes
Former-commit-id: 9cbd22b7a5f80bcfe8c4f9a0face38008507e56b

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -314,6 +314,11 @@
 			<artifactId>attvaludf</artifactId>
 			<version>platform5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.guavus</groupId>
+			<artifactId>densevectorudf</artifactId>
+			<version>${pversion}</version>
+		</dependency>
 
 		<!-- UI jars. Flex and blazeds -->
 		<dependency>
