ACU-492: Removing unwanted dependency
Former-commit-id: 455bae5784faacd75b658e705b72dfc45994263d

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -318,6 +318,12 @@
 			<groupId>com.guavus</groupId>
 			<artifactId>densevectorudf</artifactId>
 			<version>${pversion}</version>
+			<exclusions>
+				<exclusion>
+		  			<groupId>edu.berkeley.cs.shark</groupId>
+  					<artifactId>hive-exec</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- UI jars. Flex and blazeds -->
