ACU-954: Fixed issue
Former-commit-id: 7720d69ed7c8ad2e56942d388cbe17bdffcfca76

--- a/war/src/main/resources/acume.ini
+++ b/war/src/main/resources/acume.ini
@@ -75,6 +75,7 @@ acume.scheduler.enable						$CLI_REPLACE_HIVESCHEDULERENABLE$
 acume.datasource.enable 					$CLI_REPLACE_HBASEDATASOURCEENABLE$
 acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_HBASETIMESERIESLEVELPOLICYMAP$
 acume.core.disable.total.query 					$CLI_REPLACE_HBASEDISABLETOTALQUERY$
+acume.core.use.insta							$CLI_REPLACE_HBASEUSEINSTA$					
 acume.cache.rrcache.loader 					$CLI_REPLACE_HBASERRCACHELOADER$
 acume.cache.rrcacheconcurrenylevel 				$CLI_REPLACE_HBASERRCACHECONCURRENYLEVEL$
 acume.cache.rrcachesize 				        $CLI_REPLACE_HBASERRCACHESIZE$
